<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="cb_otp">otp</string>
    <string name="cb_pin">pin</string>
    <string name="cb_password_value">Password</string>
    <string name="cb_waiting_for_otp">Sit back and relax while we\n check OTP</string>
    <string name="cb_approve_otp">Approve</string>
    <string name="cb_authenticate_with">Select an option for Faster Payment</string>
    <string name="cb_regenerate_otp">Regenerate OTP</string>
    <string name="cb_regenerate_otp_text">It is taking long.You may&#8230;</string>
    <string name="cb_enter_manually">Enter OTP Manually</string>
    <string name="cb_card_not_registered_with_pin">Your card has not been registered for PIN yet. Do you want to continue with PIN?</string>
    <string name="cb_register_for_pin">REGISTER FOR PIN</string>
    <string name="cb_use_sms_otp">USE SMS OTP</string>
    <string name="cb_detect_otp">detectOtp</string>
    <string name="cb_find_otp">findOtp</string>
    <string name="cb_find_new_otp">findNewOtp</string>
    <string name="cb_process_otp">process_otp</string>
    <string name="cb_detect_bank">detectBank</string>
    <string name="cb_fill_otp">fillOTP</string>
    <string name="cb_check_visibility_cajs">checkVisibilityCatchAllJSCall</string>
    <string name="cb_catchAll_success_msg">catchAllSuccessMsg</string>
    <string name="cb_init">init</string>
    <string name="cb_result">result</string>
    <string name="cb_regenerate">regenerate</string>
    <string name="cb_skip_screen">skipScreen</string>
    <string name="cb_enter_otp">enterOTP</string>
    <string name="cb_enter_caps_otp">Enter OTP</string>
    <string name="cb_enter_pin">enterPIN</string>
    <string name="cb_retry_otp">retryOTP</string>
    <string name="cb_error">error</string>
    <string name="cb_register">register</string>
    <string name="cb_choose">choose</string>
    <string name="cb_sms_otp">SMS OTP</string>
    <string name="cb_regen_otp">regenerate_otp</string>
    <string name="cb_bank_page_loading">Please wait. Bank page is loading..</string>
    <string name="cb_cancel">cancel</string>
    <string name="cb_b_cancel">Cancel</string>
    <string name="cb_incorrect_OTP_2">incorrectOTP</string>
    <string name="cb_incorrect_pin">incorrectPIN</string>
    <string name="cb_otp_received">OTP Received</string>
    <string name="cb_incorrect_password">Incorrect Password</string>
    <string name="cb_retry">retry&#8230;</string>

    <string name="cb_register_option">registerOption</string>
    <!--Net Banking-->
    <string name="cb_populate_user_id">populate_user_id</string>
    <string name="cb_btn_action">btn_action</string>
    <string name="cb_registeration_detail">Enter your registration details</string>
    <string name="cb_no_internet_error">"Oops.. something bad happened"</string>
    <string name="cb_no_internet">NO INTERNET CONNECTIVITY</string>
    <string name="cb_remember_user">Remember User ID</string>


    <string name="cb_toggle_field">toggleField</string>
    <string name="cb_show_password">Show password</string>
    <string name="cb_pwd_btn">pwd_btn</string>
    <string name="cb_btn_text">btn_text</string>
    <string name="cb_button">Button</string>
    <string name="cb_checkbox">checkbox</string>
    <string name="cb_payu_response">payu_response</string>
    <string name="cb_process_request">Processing Your Request</string>
    <string name="cb_please_wait">Please Wait</string>
    <string name="cb_resuming_transaction">Resuming transaction please wait</string>
    <string name="cb_incorrect_otp_e">Incorrect OTP!</string>
    <string name="cb_powered_by">Powered by</string>
    <string name="cb_error_title">ERROR_TITLE</string>
    <string name="cb_enter_otp_c">Enter OTP</string>

    <!-- Content description String -->
    <string name="cb_top_arrow">CB arrow</string>
    <string name="cb_payu_icon">PayU icon</string>
    <string name="cb_bank_logo">Bank LOGO</string>
    <string name="cb_nb_image">net banking image</string>

    <string name="cb_hide">hide</string>
    <string name="cb_password">PASSWORD</string>

    <string name="cb_snooze">Snooze</string>
    <string name="cb_cancel_transaction">Cancel Transaction</string>
    <string name="cb_retry_transaction">Retry Now</string>

    <string name="cb_transaction_status">Please wait while we confirm this transaction from the bank. We will notify you once the bank confirms the status of your transaction.</string>
    <string name="cb_transaction_success_msg">We have verified the transaction with the bank. You will now be redirected to the merchant application.</string>
    <string name="cb_transaction_sucess">Transaction successful!</string>
    <string name="cb_transaction_failed">It seems the bank did not recognize the transaction. You may contact the bank/ merchant for more details.</string>
    <string name="cb_transaction_failed_retry">Or you can retry now to restart your transaction.</string>
    <string name="cb_transaction_failed_debited">Or you can retry now to restart your transaction.</string>
    <string name="cb_transaction_failed_title">Transaction not confirmed</string>
    <string name="cb_try_later">Try Later?</string>
    <string name="cb_snooze_network_error">Network Error</string>
    <string name="cb_snooze_network_down_message">We were not able to detect a better network to resume the transaction.\nYou may retry in a few minutes.</string>
    <string name="cb_snooze_try_later">TRY LATER</string>
    <string name="cb_slownetwork_status">You are on a slow network that may have caused this transaction to fail. We will notify you when your network is ready to process the transaction.</string>
    <string name="cb_retry_restart">Or you can retry now to restart your transaction.</string>

    <string name="cb_ac_debited_twice">* Your account may be debited twice if you retry.</string>


    <string name="cb_snooze_slow_user_warning">Your session is about to expire. Please complete the transaction quickly to avoid failure.</string>
    <string name="cb_snooze_slow_user_warning_header">Finish Transaction</string>

    <string name="cb_snooze_verify_api_status">api_status</string>
    <string name="cb_snooze_cookie">Cookie</string>
    <string name="cb_snooze_phpsessid">PHPSESSID</string>
    <string name="cb_snooze_payuid">PAYUID</string>

    <string name="cb_verify_message_received">verify_message_received</string>
    <string name="cb_user_input_confirm_transaction">confirm_transaction</string>
    <string name="order_information">Order Information</string>
    <string name="cb_payu_review_order">Review Order</string>



    <string name="cb_confirm_transaction">Confirm Transaction</string>
    <string name="cb_slow_internet_confirmation">Due to slower internet on your mobile device, we were unable to receive a confirmation from the bank.</string>
    <string name="cb_receive_sms">Did you receive a SMS from your bank?</string>

    <string name="cb_transaction_paused">Transaction Paused</string>
    <string name="cb_snooze_retry_anyway">RETRY ANYWAY</string>
    <string name="resuming_your_transaction">Resuming your transaction...</string>
    <string name="internet_restored">Internet Restored</string>
    <string name="cb_transaction_verified">Transaction Verified</string>
    <string name="redirect_back_to_merchant">Redirecting you back to merchant...</string>
    <string name="cb_transaction_state_unknown">Transaction State Unknown</string>
    <string name="status_unknown_redirect_to_merchant">The bank could not verify the transaction at this time. Redirecting you back to the merchant...</string>
    <string name="sp_internet_restored_ttl">sp_internet_restored_ttl</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="cb_review_order">Review Order</string>
    <string name="text_or">or </string>
    <string name="hint_vpa">Enter your VPA</string>
    <string name="vpa_title">Enter your VPA (UPI Address)</string>
    <string name="upi_chooser_title">Choose UPI app</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="verify_vpa">Verify VPA</string>

    <string name="surepay_js">function surePayData(){var list = document.getElementsByTagName(\"input\");
                    "var map = {};
                    "for(var i =0;i&lt;list.length;i++)
                    "{if(list[i].type=='hidden')
                    "map[list[i].name]=list[i].value;}
                    "PayU.surePayData(JSON.stringify(map));};
                    "surePayData();</string>
    <string name="cb_verify">Verify</string>
    <string name="cb_verify_and_proceed">Verify and Proceed to Pay</string>
    <string name="cb_invalid_vpa">Invalid VPA</string>

    <!--MetaData-->
    <string name="cb_debug_enabled">cb_debug_enabled</string>
    <string name="payu_debug_mode_enabled">payu_debug_mode_enabled</string>
    <string name="cb_logs_level">cb_logs_level</string>
    <string name="payu_logs_level">payu_logs_level</string>
    <string name="payu_logging_enabled">payu_logging_enabled</string>
</resources>
