<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:background="@drawable/shape_progress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerInParent="true"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:gravity="center_horizontal"

        android:orientation="vertical" >

        <ImageView
            android:src="@drawable/l_icon1"
            android:paddingTop="10dp"
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cb_payu_icon"
            android:scaleType="centerInside"
            />

        <TextView
            android:paddingTop="30dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="20dp"
            android:id="@+id/dialog_title"
            android:layout_gravity="center_horizontal"
            android:textStyle="normal"
            android:text="@string/cb_process_request">
        </TextView>
        <TextView
            android:paddingTop="10dp"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:text="@string/cb_please_wait"
            android:id="@+id/dialog_desc">
        </TextView>



    </LinearLayout>



</RelativeLayout><!-- From: file:/Users/shoaib/projects/android-sdk-test-project/CustomBrowser/res/layout/cb_prog_dialog.xml -->